CHANGE images are now responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <style>
             .body{
@@ -21,13 +21,13 @@
     </head>
 
     <body class="body">
-        <div class="center">
+        <div class="center">    
         <div class="container-fluid">
         
-            <img src="pictures/vc_caiu.png" alt="haha"> <br />
-            <img src="pictures/one.gif"> <br />
-            <img src="pictures/de_abril.png"> <br />
-            <img src="pictures/nelson.jpg" alt="haha"> 
+            <img class="img-responsive" src="pictures/vc_caiu.png"> <br />
+            <img class="img-responsive" src="pictures/one.gif"> <br />
+            <img class="img-responsive" src="pictures/de_abril.png"> <br />
+            <img class="img-responsive" src="pictures/nelson.jpg" alt="haha"> 
         </div>
         </div>
     </body>
