ADD irreverent commentary

--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
+
+
+<!--
+####################################################
+
+"Roses are gay, violets are gayer...
+... fuck this poem, and listen to Slayer!"
+
+Escrevi e saí correndo, pau no cu de quem ta lendo!
+
+huehuehuehue
+
+####################################################
+-->
+
 <html>
     <head>
-        <meta charset="utf-8"> 
+        <meta charset="utf-8">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
@@ -23,7 +38,6 @@
     <body class="body">
         <div class="center">    
         <div class="container-fluid">
-        
             <img class="img-responsive" src="pictures/vc_caiu.png"> <br />
             <img class="img-responsive" src="pictures/one.gif"> <br />
             <img class="img-responsive" src="pictures/de_abril.png"> <br />
